.provarCaches/00D5f000005vwGkEAI/objects/rstk__fcstcal__c.object
<CustomObject>
    <description>fcstcal__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fcstcal_firstday__c</fullName>
        <inlineHelpText>The first day of this month as defined by this record.  May or may not be actual last day of calendar month.</inlineHelpText>
        <label>First Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcal_lastday__c</fullName>
        <inlineHelpText>The last day of this month as defined by this record. May or may not be actual last day of calendar month.</inlineHelpText>
        <label>Last Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcal_month__c</fullName>
        <inlineHelpText>The month within the given year as defined by this record.  Actual dates of month may overlap calendar months, as defined by first and last day fields on this record.</inlineHelpText>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__fcstcal_year__c</fullName>
        <inlineHelpText>The year as defined by this record.  May overlap actual calendar years.</inlineHelpText>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(rstk__fcstcal_year__c ) + TEXT(rstk__fcstcal_month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT( rstk__fcstcal_year__c ) + &apos;-&apos; +  TEXT( rstk__fcstcal_month__c )</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Forecast Calendar</label>
    <listViews>
        <fullName>rstk__RS_Forecast_Calendar</fullName>
        <columns>NAME</columns>
        <columns>rstk__fcstcal_month__c</columns>
        <columns>rstk__fcstcal_year__c</columns>
        <columns>rstk__fcstcal_firstday__c</columns>
        <columns>rstk__fcstcal_lastday__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Forecast Calendar</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>